add Google Search Console verification meta tag

--- a/layouts/partials/extend_head.html
+++ b/layouts/partials/extend_head.html
@@ -1,3 +1,4 @@
+<meta name="google-site-verification" content="MlTh3zuFq8BQRVtxC4cHca6lEFl7FmdCMGvruMnAcVw" />
 <meta name="msvalidate.01" content="48D6D468D1F232436AEC95EF0D3C0E31" />
 <!-- Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-TNHGK34QTQ"></script>
