--- a/layouts/partials/extend_head.html
+++ b/layouts/partials/extend_head.html
@@ -16,3 +16,16 @@
 <link rel="icon" type="image/svg+xml" href="/ai-tech-blog/favicon.svg">
 <link rel="shortcut icon" href="/ai-tech-blog/favicon.ico">
 <meta name="theme-color" content="#6366f1">
+
+<!-- KaTeX for math rendering -->
+{{ if .Param "math" }}
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.21/dist/katex.min.css" integrity="sha384-zh0CIslj3TiOf4SRUFhHdRFflGJmTE/jMHMvlU1MYEmXOHUfJTwKIuSY0MiYBJQv" crossorigin="anonymous">
+<script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.21/dist/katex.min.js" integrity="sha384-bB0mNg9BHIY3eRkUCI92+N0RMM7KWiS0o0u2TXeE6oMBF0EYKPHlhSfOAjGKVhA" crossorigin="anonymous"></script>
+<script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.21/dist/contrib/auto-render.min.js" integrity="sha384-hCXGrKS6CPnSoUAeTq9MrkNJxwyTbGFSwvocNioPAJTo0jmfCE/Z6EcV4YGwS3wh" crossorigin="anonymous"
+    onload="renderMathInElement(document.body, {
+      delimiters: [
+        {left: 861728, right: 861728, display: true},
+        {left: , right: , display: false}
+      ]
+    });"></script>
+{{ end }}
