--- a/layouts/partials/extend_head.html
+++ b/layouts/partials/extend_head.html
@@ -24,8 +24,8 @@
 <script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.21/dist/contrib/auto-render.min.js" integrity="sha384-hCXGrKS6CPnSoUAeTq9MrkNJxwyTbGFSwvocNioPAJTo0jmfCE/Z6EcV4YGwS3wh" crossorigin="anonymous"
     onload="renderMathInElement(document.body, {
       delimiters: [
-        {left: 861728, right: 861728, display: true},
-        {left: , right: , display: false}
+        {left: {{ `$$` | safeJS }}, right: {{ `$$` | safeJS }}, display: true},
+        {left: {{ `$` | safeJS }}, right: {{ `$` | safeJS }}, display: false}
       ]
     });"></script>
 {{ end }}
